--- a/KinectWebServer/packages.config
+++ b/KinectWebServer/packages.config
@@ -1,7 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="David.Utility.Log4net" version="2.0.2" targetFramework="net45" />
   <package id="log4net" version="2.0.3" targetFramework="net45" />
   <package id="Microsoft.Kinect" version="2.0.1410.19000" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
+  <package id="SuperSocket" version="1.6.4" targetFramework="net45" />
+  <package id="SuperWebSocket" version="0.9.0.2" targetFramework="net45" />
   <package id="SuperWebSocketNETServer" version="0.8" targetFramework="net45" />
 </packages>
